--- a/styles/term3.less
+++ b/styles/term3.less
@@ -9,7 +9,8 @@
 .term3 {
   overflow: hidden;
   .terminal {
-    padding: 0;
+    padding: 5px 10px;
+    height: 100%;
     overflow: auto;
     > div {
       white-space: pre;
